Fix overlap for inGame=1

--- a/theme/common.less
+++ b/theme/common.less
@@ -882,6 +882,18 @@ p.ui.font.small {
     i.green.icon {
         color: rgba(0,0,0,.6)!important;
     }
+
+    #editortools {
+        left: auto;
+    }
+
+    #editortools > div > div > .ui.grid > .column.left {
+        display: none;
+    }
+
+    #editortools > div > div > .ui.grid > .column.right {
+        width: 100%!important;
+    }
 }
 
 #root.headless.collapsedEditorTools {
